test/domains/claridge/sparseStridableQuery.chpl
var D = {1..10};
var D_sparse: sparse subdomain(D);
writeln(D_sparse.stridable);
